cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

# Add OTUS Matrix library
add_subdirectory("thirdparty/matrix")

# check environment variable TRAVIS_BUILD_NUMBER
if($ENV{TRAVIS_BUILD_NUMBER})
    set(VERSION_BUILD $ENV{TRAVIS_BUILD_NUMBER})
else()
    set(VERSION_BUILD 0)
endif()

project(matrix VERSION 0.0.${VERSION_BUILD} LANGUAGES CXX)

set(MATRIX_TARGET_APP "${PROJECT_NAME}_app")
add_executable(${MATRIX_TARGET_APP} "src/main.cpp")
target_compile_features(${MATRIX_TARGET_APP} PRIVATE
    $<TARGET_PROPERTY:otus_matrix::otus_matrix,INTERFACE_COMPILE_FEATURES>
)
target_include_directories(${MATRIX_TARGET_APP} PRIVATE
    $<TARGET_PROPERTY:otus_matrix::otus_matrix,INTERFACE_INCLUDE_DIRECTORIES>
)

# configure directories
set(SOURCE_PATH "${PROJECT_SOURCE_DIR}/src")

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT alex.aspirine@gmail.com)

include(CPack)
